--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#6223d2" />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://voidvision.tv/" />
+  <link rel="canonical" href="https://voidvision.xyz/" />
 
   <!-- Icons -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
@@ -20,8 +20,8 @@
   <meta property="og:site_name" content="VoidVision" />
   <meta property="og:title" content="VoidVision — Enter the Void" />
   <meta property="og:description" content="A hypnotic, holographic portal: floating geometry, psychedelic visuals, and a random video drop." />
-  <meta property="og:url" content="https://voidvision.tv/" />
-  <meta property="og:image" content="https://voidvision.tv/og.svg" />
+  <meta property="og:url" content="https://voidvision.xyz/" />
+  <meta property="og:image" content="https://voidvision.xyz/og.svg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
@@ -34,7 +34,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "VoidVision",
-      "url": "https://voidvision.tv/",
+      "url": "https://voidvision.xyz/",
       "inLanguage": "en"
     }
   </script>
