--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
   <link rel="stylesheet" href="style.css?v=2025-12-19" />
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4959493300348608"
+     crossorigin="anonymous"></script>
+     
 </head>
 <body>
   <!-- Animated background -->
